# pytest-meta

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/pytest_meta/: __init__.py  plugin.py
src/pytest_meta/metainfo/: __init__.py  meta_collector.py  metainfo.py  routes.py  session_meta.py  test_meta.py
src/pytest_meta/metainfo/models/: session_models.py  test_models.py
test/: test_parameters.py  test_plugin_comprehensive.py
tests/: conftest.py  test_custom_meta.py  test_meta.py  test_properties.py
